Documentation 4.4: Update Java references to Java 11, update link to the manual and release scripts (#7378)
* Update Java references to Java 11 and update link to the manual

* Update release scripts to remove Sphinx docs updates and fix SQL migration script folder name

* Add Tomcat / Jetty versions and JAVA_OPTS configuration for metrics endpoint